--- a/css/style.css
+++ b/css/style.css
@@ -283,6 +283,7 @@ body {
         justify-content: space-between;
         flex-direction: column;
         max-width: 100%;
+        padding-left: 10px;
         gap: 0px;
     }
     .sidebar-blog-content-main {
