--- a/css/style.css
+++ b/css/style.css
@@ -84,6 +84,7 @@ body {
     display: flex;
     justify-content: space-between;
     width: 729px;
+    gap:20px;
 }
 
 .web-image-desktop {
@@ -284,7 +285,7 @@ body {
         flex-direction: column;
         max-width: 100%;
         align-items:center;
-        gap: 0px;
+        padding-left: 1.35rem
     }
     .sidebar-blog-content-main {
         margin-bottom: 20px;
